@@ -17,14 +17,13 @@
     limitations under the License.
 
 -->
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
         <groupId>org.apache.camel</groupId>
         <artifactId>core</artifactId>
-        <version>3.9.0-SNAPSHOT</version>
+        <version>4.5.0-SNAPSHOT</version>
     </parent>
 
     <artifactId>camel-main</artifactId>
@@ -43,6 +42,7 @@
         <sourcecheckExcludesComma>
             ${sourcecheckExcludes},
         </sourcecheckExcludesComma>
+        <camel.surefire.fork.vmargs>--add-opens java.base/java.util=ALL-UNNAMED</camel.surefire.fork.vmargs>
     </properties>
 
     <dependencies>
@@ -101,6 +101,11 @@
         </dependency>
         <dependency>
             <groupId>org.apache.camel</groupId>
+            <artifactId>camel-health</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.camel</groupId>
             <artifactId>camel-log</artifactId>
             <scope>test</scope>
         </dependency>
@@ -116,7 +121,12 @@
         </dependency>
         <dependency>
             <groupId>org.apache.logging.log4j</groupId>
-            <artifactId>log4j-slf4j-impl</artifactId>
+            <artifactId>log4j-core</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-slf4j2-impl</artifactId>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -145,6 +155,18 @@
                         <goals>
                             <goal>generate-configurer</goal>
                         </goals>
+                        <configuration>
+                            <classes>
+                                <!-- we want to have configurer for AwsVaultConfiguration in the package main to prevent a split packages issue -->
+                                <class>org.apache.camel.vault.AwsVaultConfiguration=org.apache.camel.main.AwsVaultConfiguration</class>
+                                <!-- we want to have configurer for AzureVaultConfiguration in the package main to prevent a split packages issue -->
+                                <class>org.apache.camel.vault.AzureVaultConfiguration=org.apache.camel.main.AzureVaultConfiguration</class>
+                                <!-- we want to have configurer for GcpVaultConfiguration in the package main to prevent a split packages issue -->
+                                <class>org.apache.camel.vault.GcpVaultConfiguration=org.apache.camel.main.GcpVaultConfiguration</class>
+                                <!-- we want to have configurer for HashicorpVaultConfiguration in the package main to prevent a split packages issue -->
+                                <class>org.apache.camel.vault.HashicorpVaultConfiguration=org.apache.camel.main.HashicorpVaultConfiguration</class>
+                            </classes>
+                        </configuration>
                     </execution>
                     <execution>
                         <id>generate-test-configurer</id>
@@ -160,7 +182,29 @@
                     </execution>
                 </executions>
             </plugin>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>build-helper-maven-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <phase>generate-sources</phase>
+                        <goals>
+                            <goal>add-source</goal>
+                            <goal>add-resource</goal>
+                        </goals>
+                        <configuration>
+                            <sources>
+                                <source>src/generated/java</source>
+                            </sources>
+                            <resources>
+                                <resource>
+                                    <directory>src/generated/resources</directory>
+                                </resource>
+                            </resources>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
         </plugins>
     </build>
-
 </project>
